# toto-engine-v0

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.MD  README.MD
impl/shaders/: basic.vert  depth.frag  hdri.frag  hdri.vert  normal.frag  phong.frag  phong_fragment.glsl  position.frag
includes/TotoEngine/: Aliases.hpp  Audio.hpp  Core.hpp  GL.hpp  GLObject.hpp  GeometryBuffer.hpp  Graphics.hpp  Instantiation.hpp  LibObject.hpp  Math.hpp  MeshData.hpp  Physics.hpp  Primitives.hpp  ShaderFile.hpp  ShaderProgram.hpp  Texture.hpp  TotoEngine.hpp  Transform.hpp  Uniforms.hpp  Version.hpp  VertexBuffer.hpp  Window.hpp
includes/TotoEngine/Audio/: Allocators.hpp  Context.hpp  Device.hpp  FileFormats.hpp  Sample.hpp  SampleLoader.hpp  WaveformLoader.hpp
includes/TotoEngine/Core/: Aliases.hpp  Instantiation.hpp  LibObject.hpp  Logger.hpp  Window.hpp
includes/TotoEngine/Graphics/: Aliases.hpp  Camera.hpp  FrameBuffer.hpp  GLObject.hpp  GeometryBuffer.hpp  Light.hpp  Materials.hpp  Primitives.hpp  Renderer.hpp  ShaderFile.hpp  ShaderLoader.hpp  ShaderProgram.hpp  Shapes.hpp  Texture.hpp  TextureLoader.hpp  Uniforms.hpp
includes/TotoEngine/Graphics/GPUObjects/: Allocators.hpp  FrameBuffer.hpp  GLObject.hpp  GeometryBuffer.hpp  ShaderFile.hpp  ShaderProgram.hpp  Texture.hpp  Uniforms.hpp
includes/TotoEngine/Graphics/Loaders/: ShaderLoader.hpp  Shapes.hpp  TextureLoader.hpp
includes/TotoEngine/Graphics/RenderData/: Camera.hpp  Light.hpp  Materials.hpp
includes/TotoEngine/Math/: Primitives.hpp  Transform.hpp
includes/TotoEngine/Physics/: Collisions.hpp
includes/TotoEngine/io/: Window.hpp
res/shaders/: basic_fragment.glsl  fragment.glsl  vertex.glsl
sources/: GL.cpp  GeometryBuffer.cpp  ShaderProgram.cpp  TotoEngine.cpp  Transform.cpp  Version.cpp  VertexBuffer.cpp  Window.cpp
sources/Audio/: Allocators.cpp  SampleLoader.cpp  WaveformLoader.cpp
sources/Core/: Window.cpp
sources/Graphics/: FrameBuffer.cpp  GeometryBuffer.cpp  Light.cpp  Materials.cpp  Renderer.cpp  ShaderProgram.cpp  Shapes.cpp  TextureLoader.cpp
sources/Graphics/GPUObjects/: Allocators.cpp  FrameBuffer.cpp  GeometryBuffer.cpp  ShaderProgram.cpp
sources/Graphics/Loaders/: Shapes.cpp  TextureLoader.cpp
sources/Graphics/RenderData/: Materials.cpp
sources/Math/: Transform.cpp
sources/Physics/: Collisions.cpp
sources/impl/shaders/: basic.frag.hpp  basic.vert.hpp  depth.frag.hpp  hdri.frag.hpp  hdri.vert.hpp  normal.frag.hpp  phong.frag.hpp  phong_fragment.glsl.hpp  position.frag.hpp
sources/io/: Window.cpp
sources/res/shaders/: basic_fragment.glsl.hpp  fragment.glsl.hpp  vertex.glsl.hpp
tesperiment/deferred/: gfx-data.hpp  main.cpp
tesperiment/deferred/assets/: deferred.frag  phong_pass.frag  screen.frag  screen.vert
tesperiment/pbr/: data.hpp  main.cpp
tesperiment/pbr/assets/: hdri.frag  pbr.frag  pbr.vert
tesperiment/physics/: main.cpp  physics_experiment.hpp
tests/: gfx-data.hpp  main.cpp  physics.cpp
tests/deferred/: deferred.cpp  gfx-data.hpp  main.cpp
tests/physics/: level1.hpp  level2.hpp  level2b.hpp  physics.cpp  physics_experiment.cpp
tests_assets/: basic.vert  deferred.frag  depth.frag  normal.frag  phong_pass.frag  screen.vert
utils/: embed-res  files_and_folders2.cmake
utils/tooling/: embedder-bulk.py  embedder.py
vendors/: imgui.cmake  stb.cmake
